[package]
name = "httproxy"
version = "0.1.0"
edition = "2021"
authors = ["Vinícius Kury"]
license = "MIT"
readme = "README.md"
description = "A simple HTTP proxy server written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
http = "0.2.8"
httparse = "1.8.0"
syslog = "6.0.1"
