[package]
name = "httproxy"
version = "0.1.0"
edition = "2021"
authors = ["Vinícius Kury"]
license = "MIT"
readme = "README.md"
description = "A simple HTTP proxy server written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
digest = "0.10.6"
log = "0.4.17"
hex = "0.4.3"
httparse = "1.8.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
sha2 = "0.10"
syslog = "6.0.1"
